# mcp_entrega_de_productos

./: .gitignore  README.md  agents.md  dump.json  fastmcp.json  kill_ports.ps1  main.py  output.json  pyproject.toml  scratch.py  server_test.py  test_app.py
data/: delivery_state.json
delivery_app/: README.md  __init__.py  app.py  pyproject.toml  schemas.py  server.py
delivery_app/data/: delivery_state.json
delivery_app/data/history/: 2026-04-23.json  2026-04-24.json  2026-04-27.json
delivery_app/domain/: __init__.py  enums.py  models.py  trip_manager.py  validators.py
delivery_app/infrastructure/: __init__.py  atomic_file_io.py  config.py  json_repository.py  maps_url_builder.py  osrm_client.py
delivery_app/services/: fuel_calculator.py  fuel_service.py  navigation_service.py  persistence.py  route_optimizer.py  routing_service.py  trip_service.py
delivery_app/tests/: test_export_route.py  test_fuel_calculator.py  test_persistence.py  test_route_optimizer.py
delivery_app/tests/integration/: test_atomic_file_io.py  test_json_repository.py  test_routing_service.py
delivery_app/tests/smoke/: test_double_close.py  test_happy_path.py  test_out_of_order_delivery.py
delivery_app/tests/unit/: test_enums.py  test_maps_url_builder.py  test_models.py  test_navigation_service.py  test_trip_manager.py  test_validators.py
delivery_app/tools/: __init__.py  config_tools.py  delivery_tools.py  history_tools.py  route_tools.py  trip_tools.py
delivery_app/ui/: __init__.py  app_builder.py  components.py  state_mapper.py
delivery_app/utils/: time_utils.py
(+26 files in other folders)
