[project]
name = "mi-mcp-vps"
version = "0.1.0"
description = "MCP servers and apps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp[apps]",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
