[project]
name = "delivery-app"
version = "0.1.0"
description = "MCP App para repartidor de productos de limpieza"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp[apps]",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["delivery_app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
